

syntax = "proto3";
package crucis;

import "error_code.proto";

message AddUserRes {
  string card_id = 1;   // card_id
  crucis.ErrorCode code = 2;   // 错误码
}






