

syntax = "proto3";
package crucis;

import "crucis/message_type.proto";

message RpcRequestData {
  uint32 service_id = 1;   // 服务类型id号
  uint32 function = 2;   // 函数的id号
  crucis.MessageType type = 3;   // 
  uint32 seq_id = 4;   // 
  uint64 service_object = 5;   // 服务实例id号
  bytes content = 6;   // 
}






